[package]
name = "uutils-args"
version = "0.1.0"
edition = "2021"
authors = ["Terts Diepraam"]
license = "MIT"

homepage = "https://github.com/uutils/uutils-args"
repository = "https://github.com/uutils/uutils-args"
readme = "README.md"

[dependencies]
uutils-args-derive = { version = "0.1.0", path = "derive" }
uutils-args-complete = { version = "0.1.0", path = "complete", optional = true }
strsim = "0.11.0"
lexopt = "0.3.0"

[features]
parse-is-complete = ["complete"]
complete = ["uutils-args-complete"]

[workspace]
members = ["derive", "complete"]
