[package]
name = "uutils-args"
version = "0.1.0"
edition = "2024"
authors = ["Terts Diepraam"]
license = "MIT"

homepage = "https://github.com/uutils/uutils-args"
repository = "https://github.com/uutils/uutils-args"
readme = "README.md"

[dependencies]
lexopt = "0.3.0"
roff = "0.2.1"
strsim = "0.11.1"
uutils-args-derive = { version = "0.1.0", path = "derive" }

[dev-dependencies]
trybuild = "1.0.104"

[features]
parse-is-complete = []

[workspace]
members = ["derive"]
