[package]
name = "derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro = true

[dependencies]
proc-macro2 = "1.0.47"
pulldown-cmark = "0.9.2"
quote = "1.0.21"
syn = { version = "2.0.16", features = ["full"] }
